--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -64,7 +64,7 @@
 
 		<footer>
 			<p>
-				<em>Built with <a href="https://www.11ty.dev/">{{ eleventy.generator }}</a></em>
+				Built with <a href="https://www.11ty.dev/">Eleventy</a>
 			</p>
 		</footer>
 
