--- a/css/index.css
+++ b/css/index.css
@@ -276,7 +276,7 @@ header {
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	text-transform: capitalize;
+	text-transform: lowercase;
 	font-style: italic;
 }
 .postlist-item > .post-tag {
