Removed extraneous 'home' link on top to save screen real estate, which is especially useful for narrow displays

--- a/content/index.njk
+++ b/content/index.njk
@@ -1,8 +1,11 @@
 ---js
-const eleventyNavigation = {
-	key: "Home",
-	order: 1
-};
+// don't need 'Home' link since the site name on the left is the same, and because w/ 'Home' there 
+// are enough links to make it wrap on narrow displays, which looks off since only the MLB link is on the 
+// second row and the spacing between seems longer than it should be
+//const eleventyNavigation = {
+//	key: "Home",
+//	order: 1
+//};
 
 const numberOfLatestPostsToShow = 3;
 ---
